--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../src/style.css" />
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Reem Kufi' rel='stylesheet'>
-    <link rel="icon" type="svg" href="../src/red7.svg">
+    <link rel="icon" type="svg" href="./red7.svg">
     <title>RED7 Cards game</title>
 </head>
 
@@ -19,7 +19,7 @@
 
         <div>
             <p><span>by Marta Adell</span> <a href="https://github.com/martadell">
-                    <img src="../src/github.svg" alt="github" /></a></p>
+                    <img src="./github.svg" alt="github" /></a></p>
         </div>
     </header>
 
@@ -112,7 +112,7 @@
                 </p>
             </div>
         </div>
-        <script type="text/javascript" src="bundle.js"></script>
+        <script type="text/javascript" src="/dist/bundle.js"></script>
 </body>
 
 </html>
