--- a/public/index.html
+++ b/public/index.html
@@ -33,15 +33,15 @@
                         <option value="1">3</option>
                         <option selected value="2">4</option>
                     </select>
-                    <button id="restartBttn">restart</button></p>
+                    <button id="bttnRestart">restart</button></p>
             </div>
         </div>
         <p id="aRule"> </p>
         <div class="buttons">
             <div id="bttns">
-                <button id="ctPaletteBttn">Play hand's card to the palette</button>
-                <button id="caRuleBttn">Play hand's card as a rule</button>
-                <button id="finishBttn">Finish</button>
+                <button id="bttnPalette">Play hand's card to the palette</button>
+                <button id="bttnRule">Play hand's card as a rule</button>
+                <button id="bttnFinish">Finish</button>
             </div>
         </div>
     </div>
@@ -98,17 +98,6 @@
                     <strong>7</strong>: Choose a card from your Palette and either
                     discard it to the Canvas or place it face down on top of the Draw
                     Deck. If you discard it, you must be winning afterward.<br>
-                    <br>
-                    <br>
-                    <br><strong>*notes:<br> 1.</strong> If you are playing with action rule 1 and there is
-                    no option for stealing another player's card (because your palette is longer 
-                    than everyone else's), it might still show the message for this rule in red on
-                    top of the page. If so, just click a random card from another player
-                    and it will be ignored (the card will work as a non-action rule card)<br>
-                    <strong>2.</strong> After playing the action rule 5 it might appear the button for
-                    choosing another card to play on the palette. Please ignore that option,
-                    it shouldn't be possible
-                    Thanks!!! (these small bugs couldn't be fixed on time ):
                 </p>
             </div>
         </div>
